episodes/ecs-m3/demo4/stock-api/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: stock-api
  namespace: widgetario
spec:
  host: stock-api.widgetario.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
