episodes/ecs-m3/demo4/stock-api/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: stock-api
  namespace: widgetario
spec:
  hosts:
    - stock-api.widgetario.svc.cluster.local
  http:
  - route:
    - destination:
        host: stock-api.widgetario.svc.cluster.local
        subset: v1
